tests/valid/function/local_let_rec_capture_direct_call.facet
fn main() -> unrestricted isize {
  let y: unrestricted isize = 1 in
  let rec [y] f(x: unrestricted isize) -> unrestricted isize {
    y
  }
  in (f 0)
}
