tests/invalid/linear_affine_error/linear_to_unrestricted_binding.facet
fn f(x: linear isize) -> unrestricted isize {
  let y: unrestricted isize = x;
  y
}
